--- a/Exercício013/index.html
+++ b/Exercício013/index.html
@@ -8,10 +8,34 @@
 </head>
 <body>
     <div class="container">
-<h1>Exercício 013</h1>
+<h1 class="text-md-center text-and">Exercício 013</h1>
 <blockquote>"Não me venha com esse papo de emprego, o que eu quero é sossego"</blockquote>
 <p>13 Armazenando lista de carros de um estacionamento</p>
-    </div>
+<hr>
+<div class="row">
+    <div class="col-12 col-md-4 fundo text-light">Texto 1</div>
+    <div class="col-12 col-md-4 bg-warning">Texto 2</div>
+    <div class="col-12 col-md-4 bg-success">Texto 3</div>
+</div>
+<table class="table table-primary table-striped table-hover mt-5">
+    <thead>
+        <tr>
+            <th>Nome</th>
+            <th>Idade</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Guto</td>
+            <td>39</td>
+        </tr>
+        <tr>
+            <td>Guto</td>
+            <td>39</td>
+        </tr>
+    </tbody>
+</table>
+<a href="https://sp.senac.br" class="btn btn-outline-success btn-lg">senac</a>
 
 </body>
 </html>
