--- a/index.html
+++ b/index.html
@@ -46,25 +46,91 @@
     </div>
   </div>
 
-             <div class="col-12 col-md-3">
-                <div class="bg-dark p-5 text-light rounded cartao">
-                     <i class="bi bi-person-circle fs-1"></i>
-                      <h3 class="mt-3">Exercício 003</h3>
-                      <p class="fw-light">Pedir o nome e a idade do usuário e escrever essas informações de uma forma amigável.</p>
-                      <a href="https://vinisestari.github.io/exercicios-js-o-retorno/Exercício003/"
-                      class="btn btn-outline-light fw-semibold mt-4">Ver online</a>
-                </div>
-            </div>
+ <div class="col-12 col-md-3 d-flex">
+    <div class="cartao bg-dark p-5 text-light rounded d-flex flex-column w-100">
+      <i class="bi bi-person-circle fs-1"></i>
+      <h3 class="mt-3">Exercício 003</h3>
+      <p class="fw-light flex-grow-1">
+        Calcular a média de venda à partir dos valores vendidos em cada um dos meses do 1º Trim de 2018 de um vendedor.
+      </p>
+      <a href="https://vinisestari.github.io/exercicios-js-o-retorno/Exercício003/"
+         class="btn btn-outline-light fw-semibold mt-4 align-self-start">
+        Ver online
+      </a>
+    </div>
+  </div>
 
-             <div class="col-12 col-md-3">
-                <div class="bg-dark p-5 text-light rounded cartao">
-                     <i class="bi bi-person-circle fs-1"></i>
-                      <h3 class="mt-3">Exercício 001</h3>
-                      <p class="fw-light">Pedir o nome e a idade do usuário e escrever essas informações de uma forma amigável.</p>
-                      <a href="https://vinisestari.github.io/exercicios-js-o-retorno/Exercício001/"
-                      class="btn btn-outline-light fw-semibold mt-4">Ver online</a>
-                </div>
-            </div>
+            <div class="col-12 col-md-3 d-flex">
+    <div class="cartao bg-dark p-5 text-light rounded d-flex flex-column w-100">
+      <i class="bi bi-person-circle fs-1"></i>
+      <h3 class="mt-3">Exercício 004</h3>
+      <p class="fw-light flex-grow-1">
+       Validar se um candidato pode ou não iniciar o processo de CNH.
+      </p>
+      <a href="https://vinisestari.github.io/exercicios-js-o-retorno/Exercício004/"
+         class="btn btn-outline-light fw-semibold mt-4 align-self-start">
+        Ver online
+      </a>
+    </div>
+  </div>
+
+  <br>
+
+  <div class="col-12 col-md-3 d-flex">
+    <div class="cartao bg-dark p-5 text-light rounded d-flex flex-column w-100">
+      <i class="bi bi-person-circle fs-1"></i>
+      <h3 class="mt-3">Exercício 004</h3>
+      <p class="fw-light flex-grow-1">
+       Validar se um candidato pode ou não iniciar o processo de CNH.
+      </p>
+      <a href="https://vinisestari.github.io/exercicios-js-o-retorno/Exercício004/"
+         class="btn btn-outline-light fw-semibold mt-4 align-self-start">
+        Ver online
+      </a>
+    </div>
+  </div>
+
+<div class="col-12 col-md-3 d-flex">
+    <div class="cartao bg-dark p-5 text-light rounded d-flex flex-column w-100">
+      <i class="bi bi-person-circle fs-1"></i>
+      <h3 class="mt-3">Exercício 004</h3>
+      <p class="fw-light flex-grow-1">
+       Validar se um candidato pode ou não iniciar o processo de CNH.
+      </p>
+      <a href="https://vinisestari.github.io/exercicios-js-o-retorno/Exercício004/"
+         class="btn btn-outline-light fw-semibold mt-4 align-self-start">
+        Ver online
+      </a>
+    </div>
+  </div>
+
+  <div class="col-12 col-md-3 d-flex">
+    <div class="cartao bg-dark p-5 text-light rounded d-flex flex-column w-100">
+      <i class="bi bi-person-circle fs-1"></i>
+      <h3 class="mt-3">Exercício 004</h3>
+      <p class="fw-light flex-grow-1">
+       Validar se um candidato pode ou não iniciar o processo de CNH.
+      </p>
+      <a href="https://vinisestari.github.io/exercicios-js-o-retorno/Exercício004/"
+         class="btn btn-outline-light fw-semibold mt-4 align-self-start">
+        Ver online
+      </a>
+    </div>
+  </div>
+
+  <div class="col-12 col-md-3 d-flex">
+    <div class="cartao bg-dark p-5 text-light rounded d-flex flex-column w-100">
+      <i class="bi bi-person-circle fs-1"></i>
+      <h3 class="mt-3">Exercício 004</h3>
+      <p class="fw-light flex-grow-1">
+       Validar se um candidato pode ou não iniciar o processo de CNH.
+      </p>
+      <a href="https://vinisestari.github.io/exercicios-js-o-retorno/Exercício004/"
+         class="btn btn-outline-light fw-semibold mt-4 align-self-start">
+        Ver online
+      </a>
+    </div>
+  </div>
 
     </div>
 
